kubernetes-manifests/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: java-app
        image: chinmayapradhan/demo-app:java-mysql-app-monitoring
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: app 
          protocol: TCP
        - containerPort: 8081
          name: metrics
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  labels:
    app: java-app
spec:
  selector:
    app: java-app
  ports:
  - name: app 
    protocol: TCP
    port: 8080
    targetPort: 8080
  # We need an explicitly named ports in service for service monitor
  - name: metrics
    protocol: TCP
    port: 8081
    targetPort: 8081
