kubernetes-manifests/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: a54c53b33bf724ca0b68ec97c3a9f9b1-517619840.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: java-app-service
            port:
              number: 8080
